<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.appfinalunisinu.ui.campus.CampusFragment"
        android:label="@string/title_campus"
        tools:layout="@layout/fragment_campus" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.appfinalunisinu.ui.noticia.NoticiaFragment"
        android:label="@string/title_noticia"
        tools:layout="@layout/fragment_noticias" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.appfinalunisinu.ui.notifications.TutoriasFragment"
        android:label="@string/title_tutorias"
        tools:layout="@layout/fragment_tutorias" />

    <fragment
        android:id="@+id/navigation_usuario"
        android:name="com.example.appfinalunisinu.ui.usuario.UsuarioFragment"
        android:label="@string/usuario"
        tools:layout="@layout/fragment_usuario" />
</navigation>