<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Contenido principal de la actividad -->
    <RelativeLayout
        android:id="@+id/contenedorRaiz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.campus.CampusFragment">

        <ImageButton
            android:id="@+id/amigos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_margin="7dp"
            android:contentDescription="@string/botonflotanteamigos"
            android:elevation="1dp"
            android:src="@drawable/baseline_people_24"
            android:backgroundTint="#FFFFFF"
            android:background="@drawable/baseline_circle_24"
            />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/map_content_description"
            android:labelFor="@+id/viewPager" />

        <HorizontalScrollView
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="VisualLintBounds">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <Button
                        android:id="@+id/button1"
                        android:layout_width="350dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:backgroundTint="@color/cyan"
                        android:elevation="0dp"
                        android:gravity=""
                        android:text="@string/nfacultad_de_ningenierias"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        tools:ignore="VisualLintButtonSize" />

                    <ImageButton
                        android:id="@+id/buttoninterrogation1"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignTop="@id/button1"
                        android:layout_alignEnd="@id/button1"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@null"
                        android:contentDescription="@string/info1"
                        android:elevation="8dp"
                        android:src="@drawable/baseline_question_mark_24" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="350dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:backgroundTint="@color/cyan"
                        android:elevation="0dp"
                        android:gravity=""
                        android:text="@string/nfacultad_de_nsalud"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        tools:ignore="VisualLintButtonSize">

                    </Button>

                    <ImageButton
                        android:id="@+id/buttoninterrogation2"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignTop="@id/button2"
                        android:layout_alignEnd="@id/button2"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@null"
                        android:contentDescription="@string/info1"
                        android:elevation="8dp"
                        android:src="@drawable/baseline_question_mark_24" />

                </RelativeLayout>



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="350dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:backgroundTint="@color/cyan"
                        android:elevation="0dp"
                        android:gravity=""
                        android:text="@string/nfacultado_de_nderecho"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        tools:ignore="VisualLintButtonSize" />

                    <ImageButton
                        android:id="@+id/buttoninterrogation3"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignTop="@id/button3"
                        android:layout_alignEnd="@id/button3"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@null"
                        android:contentDescription="@string/info1"
                        android:elevation="8dp"
                        android:src="@drawable/baseline_question_mark_24" />


                </RelativeLayout>







            </LinearLayout>


        </HorizontalScrollView>



    </RelativeLayout>

    <!-- Cajón de navegación en el lado derecho -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        tools:ignore="VisualLintBounds"
        android:background="@color/white"
        >

        <!-- Aquí van los elementos del menú -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/amigosRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
